# DigitalLibrary

./: CMakeLists.txt  MakeFile  shared-library.djinni
app/: build.gradle
app/src/androidTest/java/com/example/prolificinteractive/digitallibrary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/prolificinteractive/digitallibrary/: AddBookActivity.kt  BookItemViewHolder.kt  BookItemViewModel.kt  DataSource.kt  LibraryViewAdapter.kt  MainActivity.kt
app/src/main/java/com/example/prolificinteractive/digitallibrary/addBook/: AddBookActivity.kt  AddBookViewModel.kt
app/src/main/java/com/example/prolificinteractive/digitallibrary/api/: BooksRepository.kt  DataSource.kt  LibraryApiService.kt  LibraryRepositoryProvider.kt
app/src/main/java/com/example/prolificinteractive/digitallibrary/application/: DigitalLibraryApplication.kt
app/src/main/java/com/example/prolificinteractive/digitallibrary/bookDetail/: BookDetailActivity.kt  BookDetailViewModel.kt
app/src/main/java/com/example/prolificinteractive/digitallibrary/dependencies/: ApiModule.kt  AppComponent.kt  AppModule.kt
app/src/main/res/drawable/: circular_border_shape.xml  item_background_selector.xml
app/src/main/res/layout/: activity_add_book.xml  activity_book_detail.xml  activity_main.xml  book_item.xml  bottom_sheet.xml  container.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/example/prolificinteractive/digitallibrary/: ExampleUnitTest.kt
(+3 files in other folders)
